# danakka

crawler/: crawler_basic.py  crawler_get_url.py  pyproject.toml  sunsang24.py  the_fishing.py
danakka-backend/: Dockerfile  Jenkinsfile  database.py  main.py  pyproject.toml
danakka-backend/auth/: hashing.py  models.py  security.py
danakka-backend/auth/routers/: router.py
danakka-backend/booking/: models.py  schemas.py
danakka-backend/booking/crawler/: actions.py  sunsang24.py
danakka-backend/booking/routers/: crawler.py  router.py
danakka-backend/bus/: models.py
danakka-backend/core/: config.py
danakka-backend/db/: session.py
danakka-backend/fishing/: models.py  settings.py
danakka-backend/fishing/crawler/: crawler.py  sunsang24.py
danakka-backend/fishing/routers/: __init__.py  crawler.py  router.py  routers.py.bak
danakka-backend/harbor/: action.py
danakka-backend/harbor/routers/: router.py
danakka-backend/notification/: models.py
danakka-backend/notification/routers/: router.py
danakka-backend/payment/: models.py
danakka-backend/payment/routers/: router.py
danakka-backend/species/: models.py
danakka-backend/ticket/: action.py  actions.py  models.py
danakka-backend/ticket/routers/: router.py
danakka-backend/util/: email_module.py  sms_module.py
django/: db.sqlite3  pyproject.toml
django/account/: models.py  urls.py
django/account/migrations/: 0001_initial.py  0002_alter_user_managers.py
django/config/: settings.py  urls.py
django/fishing/: models.py  serializers.py  urls.py
django/fishing/migrations/: 0001_initial.py  0002_alter_fishingitem_options.py  0002_fishingmonth_fishingspecies_and_more.py  0003_delete_fishingitem.py  0003_delete_fishingspecies.py  0004_fishingspecies.py  0004_initial.py  0005_rename_admit_fishingitem_price_fishingitem_seat.py  0006_fishing_fishingspecies_fishingtype_and_more.py  0007_fishingschedule_fishingbooking.py  0008_alter_fishingschedule_table.py  0009_remove_fishingbooking_fishing_schedule_and_more.py  0010_remove_fishingbooking_date.py  0011_fishingbooking_date.py  0012_remove_fishingbooking_date.py  0013_fishingspeciesitem_remove_fishing_fish_species_and_more.py  0014_remove_fishingbooking_fishing_and_more.py  0015_initial.py  0016_rename_name_fishing_business_name.py  0017_fishing_business_address_fishing_referrer_and_more.py  0018_fishing_created_at_fishing_updated_at_and_more.py  0019_remove_fishing_created_at_remove_fishing_updated_at.py  0020_fishing_created_at_fishing_updated_at.py  0021_fishing_species.py  0022_alter_fishing_price.py  0023_alter_fishing_price.py  0024_alter_fishing_thumbnail.py  0025_alter_fishing_thumbnail.py  0026_alter_fishing_thumbnail.py  (+47 more)
django/harbor/: apps.py  models.py
django/main/: urls.py
(+135 files in other folders)
