[tool.poetry]
name = "danakka-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "danakka_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.9"
mysql = "^0.0.3"
python-multipart = "^0.0.6"
pymysql = "^1.0.3"
python-dateutil = "^2.8.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
