[tool.poetry]
name = "danakka-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "danakka_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.9"
mysql = "^0.0.3"
python-multipart = "^0.0.6"
pymysql = "^1.0.3"
python-dateutil = "^2.8.2"
requests = "^2.28.2"
pyjwt = "^2.7.0"
passlib = "^1.7.4"
pytz = "^2023.3"
urllib3 = "1.26.15"
pushbullet-py = "^0.12.0"
bcrypt = "^4.0.1"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
